lib/tests/compile-fail/nonzero_fail_1.stderr
error: proc-macro derive panicked
 --> tests/compile-fail/nonzero_fail_1.rs:7:24
  |
7 | #[derive(EnumMetadata, NonZeroRepr)]
  |                        ^^^^^^^^^^^
  |
  = help: message: assertion failed: discriminant != 0
